Bug 1745131 - Avoid implicit fallthrough in cocoa widget code. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D133332